# Avalanche-Drone

./: .gitignore  startMain.py
sample/platform/linux/: CMakeLists.txt
sample/platform/linux/Avalanche-drone/: ADC.cpp  ADC.hpp  ADCHack.hpp  CMakeLists.txt  FlightController.cpp  FlightController.hpp  HField.cpp  HField.hpp  IIRFilter.cpp  IIRFilter.hpp  Irr_impl.cpp  Irr_impl.hpp  Kontrol.cpp  Kontrol.hpp  SignalSearch.cpp  SignalSearch.hpp  Simulation.cpp  Simulation.hpp  StepResponse.cpp  StepResponse.hpp  V3D.cpp  V3D.hpp  dataClassQnD.hpp  fft_test.cpp  fft_test.hpp  flight_control.cpp  flight_control.hpp  main.cpp  test_Kontrol.cpp
sample/platform/linux/common/: UserConfig.txt
sample/platform/linux/flight-control/: flight_control_sample.cpp  main.cpp
sample/platform/linux/missions/: mission_sample.cpp
